@@ -58,6 +58,8 @@ namespace Astroid {
       Gtk::ScrolledWindow scroll;
 
       const int MAX_PREVIEW_LEN = 80;
+      const int INDENT_PX = 30;
+      bool indent_messages;
 
       bool edit_mode = false;
 
