@@ -40,6 +40,7 @@ body {
     /*font-size: smaller !important;*/
     -webkit-user-select: none;
     -webkit-user-drag: none;
+    text-align: center;
 }
 
 
@@ -98,12 +99,13 @@ hr {
     box-shadow: 0 3px 3px rgba(0,0,0,1);
     display: block;
     word-wrap: break-word;
-    max-width: 50em;
-    margin-left: auto;
-    margin-right: auto;
+    width: 50em;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
     /*width: 60em;*/
     box-sizing:border-box;
     margin-top: 5px;
+    text-align: left;
 }
 
 .email.sent {
@@ -651,10 +653,13 @@ body:not(.nohide) .quote_container.controllable.show > .quote {
 }
 
 #message_container {
-    position: absolute;
-    left: 0;
-    right: 0;
-    padding: 0 5px 0px;
+  /*position: absolute;*/
+  /*left: 0;*/
+  /*right: 0;*/
+  /*padding: 0 5px 0px;*/
+  /*left: 50%;*/
+    margin: 0 auto;
+    display: inline-block;
     font-family: monospace;
 }
 #multiple_messages {
